@@ -1,3 +1,9 @@
+2008-03-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c: (murrine_draw_scrollbar_stepper):
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_scrollbar_stepper):
+	Fixed lightborder in scrollbar stepper
+
 2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c: (murrine_draw_radiobutton),
